--- a/src/Components/ArticleList.module.css
+++ b/src/Components/ArticleList.module.css
@@ -5,15 +5,20 @@
     /* 1 column by default */
     gap: 1.5rem;
     padding: 1rem;
-    background-color: #303633;
+    background-color: var(--background);
     /* onyx */
 }
 
-@media screen and (max-width: 600px) {
-    .info {
-            font-size: 1.5rem;
-        }
+@media screen and (max-width: 400px) {
+
+.info{
+    font-size: .75rem;
 }
+.description{
+    font-size: 1.25rem;
+}
+}
+
 
 @media (min-width: 768px) {
 
@@ -39,6 +44,7 @@
     border-radius: 0.5rem;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
     background-color: black;
+    border: 1px solid var(--headline);
     /* white */
 }
 
@@ -54,14 +60,14 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 0.5rem;
-    color: var(--paragraph);
+    color: var(--highlight);
     /* onyx */
 }
 
 .description {
     margin-bottom: 0.5rem;
     color: var(--paragraph);
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     /* platinum */
 }
 
